// protobuf 版本声明
syntax = "proto3";

// 包名
package pb;

// any
import "google/protobuf/any.proto";

// go 的包引入路径
// 通过编译选项生成到对应的目录 --go_opt=paths=source_relative
option go_package = ".;pb";

// hello_req The request message containing the user's name.
message hello_req {
    string name = 1;
}

// hello_resp The response message containing the greetings
message hello_resp {
    string message = 1;
}

// response resp with google/protobuf/any.proto
message response {
    int32 code = 1; // code
    string message = 2; // message

    google.protobuf.Any data = 4; // data
}

// greeter The greeting service definition.
service greeter {
    // say_hello say hello
    rpc say_hello (hello_req) returns (hello_resp) {
    }
}
